--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
+    <!-- <script>
+    const themeToggle = document.getElementById("themeToggle");
+
+// Check user's preference on page load
+if (localStorage.getItem("theme") === "dark") {
+    document.body.classList.add("dark");
+    themeToggle.checked = true;
+}
+
+// Toggle theme on checkbox change
+themeToggle.addEventListener("change", () => {
+    if (themeToggle.checked) {
+        document.body.classList.add("dark");
+        localStorage.setItem("theme", "dark");
+    } else {
+        document.body.classList.remove("dark");
+        localStorage.setItem("theme", "light");
+    }
+});
+
+    </script> -->
+
     <header>
       <nav class="navbar">
         <div class="yourname">YOUR NAME</div>
@@ -16,21 +38,33 @@
             <p>Projects</p>
             <p>About</p>
             <p>Newsletter</p>
+            <div class="dropdown-button">&#9776;</div>
 
-            <button>
-              <!-- <img src="/icon/outline/moon.svg" alt=""> -->
-              <div class="moon"></div>
-              <img src="/icon/outline/sun.svg" alt="" />
-            </button>
+            <div class="container">
+              <label class="switch">
+                  <input type="checkbox" id="themeToggle">
+                  <span class="slider round"></span>
+              </label>
+              <!-- <p>Toggle Dark Mode</p> -->
+            </div>
+          </div>
           </div>
         </div>
       </nav>
-      <div class="heading">THE BLOG</div>
+      <div class="heading">
+        <div class="blog">
+          THE BLOG
+        </div>
+      </div>
     </header>
     <div class="recent_post">Recent blog posts</div>
     <div class="section1">
       <div class="sec1">
-        <img src="sec1_img1.png" alt="" />
+        <div class="sec1_img1">
+          <img src="sec1_img1.png" alt="" />
+
+        </div>
+
         <div class="sec1_content">
           <div class="date">Olivia Rhye • 1 Jan 2023</div>
           <div class="sec_heading">
@@ -57,8 +91,8 @@
               tracking. Here’s how to get...
             </div>
             <div class="categories">
-                <div class="badge_bg"><div class="badge">Design</div></div>
-                <div class="badge_bg"><div class="badge">Research</div></div>
+              <div class="badge_bg"><div class="badge">Design</div></div>
+              <div class="badge_bg"><div class="badge">Research</div></div>
             </div>
           </div>
         </div>
@@ -80,17 +114,201 @@
       </div>
     </div>
     <div class="section2">
-        <div><img src="/sec2_img1.png" alt=""></div>
-        <div class="section_content">
-            <div class="date">Olivia Rhye • 1 Jan 2023</div>
-            <div class="sec_heading">Grid system for better Design User Interface</div>
-            <div class="description">A grid system is a design tool used to arrange content on a webpage. It is a series of vertical and horizontal lines that create a matrix of intersecting points, which can be used to align and organize page elements. Grid systems are used to create a consistent look and feel across a website, and can help to make the layout more visually appealing and easier to navigate.</div>
-            <div class="categories">
-                <div class="badge_bg"><div class="badge">Design</div></div>
-                <div class="badge_bg"><div class="badge">Interface</div></div>
-              </div>
+      <div class="sec2_img1"><img src="/sec2_img1.png" alt="" /></div>
+      <div class="section_content">
+        <div class="date">Olivia Rhye • 1 Jan 2023</div>
+        <div class="sec_heading">
+          Grid system for better Design User Interface
+        </div>
+        <div class="description">
+          A grid system is a design tool used to arrange content on a webpage.
+          It is a series of vertical and horizontal lines that create a matrix
+          of intersecting points, which can be used to align and organize page
+          elements. Grid systems are used to create a consistent look and feel
+          across a website, and can help to make the layout more visually
+          appealing and easier to navigate.
+        </div>
+        <div class="categories">
+          <div class="badge_bg"><div class="badge">Design</div></div>
+          <div class="badge_bg"><div class="badge">Interface</div></div>
+        </div>
+      </div>
+    </div>
+    <div class="section3">
+      <div class="sec3">
+        <div class="sec3_img">        <img src="/sec3_img1.png" alt="" />
+        </div>
+        <div class="sec3_content">
+          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="sec_heading">
+            <div>UX review presentations</div>
+          </div>
+          <div class="description">
+            How do you create compelling presentations that wow your colleagues
+            and impress your managers?
+          </div>
+          <div class="categories">
+            <div class="badge_bg"><div class="badge">Design</div></div>
+            <div class="badge_bg"><div class="badge">Research</div></div>
+          </div>
+        </div>
+      </div>
+      <div class="sec3">
+        <div class="sec3_img">
+          <img src="sec3_img2.png" alt="" />
 
         </div>
+        <div class="sec3_content">
+          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="sec_heading">
+            <div>UX review presentations</div>
+          </div>
+          <div class="description">
+            How do you create compelling presentations that wow your colleagues
+            and impress your managers?
+          </div>
+          <div class="categories">
+            <div class="badge_bg"><div class="badge">Design</div></div>
+            <div class="badge_bg"><div class="badge">Research</div></div>
+          </div>
+        </div>
+      </div>
+      <div class="sec3">
+        <div class="sec3_img">
+          <img src="sec3_img3.png" alt="" />
+
+        </div>
+        <div class="sec3_content">
+          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="sec_heading">
+            <div>UX review presentations</div>
+          </div>
+          <div class="description">
+            How do you create compelling presentations that wow your colleagues
+            and impress your managers?
+          </div>
+          <div class="categories">
+            <div class="badge_bg"><div class="badge">Design</div></div>
+            <div class="badge_bg"><div class="badge">Research</div></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="sec3">
+        <div class="sec3_img">
+          <img src="sec3_img4.png" alt="" />
+
+        </div>
+        <div class="sec3_content">
+          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="sec_heading">
+            <div>UX review presentations</div>
+          </div>
+          <div class="description">
+            How do you create compelling presentations that wow your colleagues
+            and impress your managers?
+          </div>
+          <div class="categories">
+            <div class="badge_bg"><div class="badge">Design</div></div>
+            <div class="badge_bg"><div class="badge">Research</div></div>
+          </div>
+        </div>
+      </div>
+      <div class="sec3">
+        <div class="sec3_img">
+          <img src="sec3_img5.png" alt="" />
+
+        </div>
+        <div class="sec3_content">
+          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="sec_heading">
+            <div>UX review presentations</div>
+          </div>
+          <div class="description">
+            How do you create compelling presentations that wow your colleagues
+            and impress your managers?
+          </div>
+          <div class="categories">
+            <div class="badge_bg"><div class="badge">Design</div></div>
+            <div class="badge_bg"><div class="badge">Research</div></div>
+          </div>
+        </div>
+      </div>
+      <div class="sec3">
+        <div class="sec3_img">
+          <img src="/sec3_img6.png" alt="" />
+
+        </div>
+        <div class="sec3_content">
+          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="sec_heading">
+            <div>UX review presentations</div>
+          </div>
+          <div class="description">
+            How do you create compelling presentations that wow your colleagues
+            and impress your managers?
+          </div>
+          <div class="categories">
+            <div class="badge_bg"><div class="badge">Design</div></div>
+            <div class="badge_bg"><div class="badge">Research</div></div>
+          </div>
+        </div>
+      </div>
     </div>
+    <div style="width: 100%; height: 100%; padding-top: 20px; border-top: 1px rgba(234, 236, 240, 0.34) solid; justify-content: space-between; align-items: center; display: inline-flex">
+      <div style="justify-content: flex-start; align-items: flex-start; display: flex">
+          <div style="justify-content: center; align-items: center; gap: 8px; display: flex">
+              <div style="width: 20px; height: 20px; position: relative">
+                  <div style="width: 11.67px; height: 11.67px; left: 4.17px; top: 4.17px; position: absolute; border: 1.67px #667085 solid"></div>
+              </div>
+              <div style="color: #667085; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 20px; word-wrap: break-word">Previous</div>
+          </div>
+      </div>
+      <div style="justify-content: flex-start; align-items: flex-start; gap: 2px; display: flex">
+          <div style="width: 40px; height: 40px; background: #F9F5FF; border-radius: 8px; overflow: hidden; justify-content: center; align-items: center; display: flex">
+              <div style="flex: 1 1 0; align-self: stretch; padding: 12px; border-radius: 8px; justify-content: center; align-items: center; display: inline-flex">
+                  <div style="text-align: center; color: #7F56D9; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 20px; word-wrap: break-word">1</div>
+              </div>
+          </div>
+          <div style="width: 40px; height: 40px; border-radius: 8px; overflow: hidden; justify-content: center; align-items: center; display: flex">
+              <div style="flex: 1 1 0; align-self: stretch; padding: 12px; border-radius: 8px; justify-content: center; align-items: center; display: inline-flex">
+                  <div style="text-align: center; color: #667085; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 20px; word-wrap: break-word">2</div>
+              </div>
+          </div>
+          <div style="width: 40px; height: 40px; border-radius: 8px; overflow: hidden; justify-content: center; align-items: center; display: flex">
+              <div style="flex: 1 1 0; align-self: stretch; padding: 12px; border-radius: 8px; justify-content: center; align-items: center; display: inline-flex">
+                  <div style="text-align: center; color: #667085; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 20px; word-wrap: break-word">3</div>
+              </div>
+          </div>
+          <div style="width: 40px; height: 40px; border-radius: 8px; overflow: hidden; justify-content: center; align-items: center; display: flex">
+              <div style="flex: 1 1 0; align-self: stretch; padding: 12px; border-radius: 8px; justify-content: center; align-items: center; display: inline-flex">
+                  <div style="text-align: center; color: #667085; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 20px; word-wrap: break-word">...</div>
+              </div>
+          </div>
+          <div style="width: 40px; height: 40px; border-radius: 8px; overflow: hidden; justify-content: center; align-items: center; display: flex">
+              <div style="flex: 1 1 0; align-self: stretch; padding: 12px; border-radius: 8px; justify-content: center; align-items: center; display: inline-flex">
+                  <div style="text-align: center; color: #667085; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 20px; word-wrap: break-word">8</div>
+              </div>
+          </div>
+          <div style="width: 40px; height: 40px; border-radius: 8px; overflow: hidden; justify-content: center; align-items: center; display: flex">
+              <div style="flex: 1 1 0; align-self: stretch; padding: 12px; border-radius: 8px; justify-content: center; align-items: center; display: inline-flex">
+                  <div style="text-align: center; color: #667085; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 20px; word-wrap: break-word">9</div>
+              </div>
+          </div>
+          <div style="width: 40px; height: 40px; border-radius: 8px; overflow: hidden; justify-content: center; align-items: center; display: flex">
+              <div style="flex: 1 1 0; align-self: stretch; padding: 12px; border-radius: 8px; justify-content: center; align-items: center; display: inline-flex">
+                  <div style="text-align: center; color: #667085; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 20px; word-wrap: break-word">10</div>
+              </div>
+          </div>
+      </div>
+      <div style="justify-content: flex-start; align-items: flex-start; display: flex">
+          <div style="justify-content: center; align-items: center; gap: 8px; display: flex">
+              <div style="color: #667085; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 20px; word-wrap: break-word">Next</div>
+              <div style="width: 20px; height: 20px; position: relative">
+                  <div style="width: 11.67px; height: 11.67px; left: 4.17px; top: 4.17px; position: absolute; border: 1.67px #667085 solid"></div>
+              </div>
+          </div>
+      </div>
+  </div>
   </body>
 </html>
