--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog_page</title>
     <link rel="stylesheet" href="/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
   </head>
   <body>
     <!-- <script>
@@ -69,6 +70,7 @@ themeToggle.addEventListener("change", () => {
           <div class="date">Olivia Rhye • 1 Jan 2023</div>
           <div class="sec_heading">
             <div>UX review presentations</div>
+            <i class="ri-arrow-right-up-line"></i>
           </div>
           <div class="description">
             How do you create compelling presentations that wow your colleagues
@@ -85,7 +87,9 @@ themeToggle.addEventListener("change", () => {
           <img src="sec1_img2.png" alt="" />
           <div class="sec2_content">
             <div class="date">Phoenix Baker • 1 Jan 2023</div>
-            <div class="sec_heading">Migrating to Linear 101</div>
+            <div class="sec_heading"><div>Migrating to Linear 101</div>
+              <i class="ri-arrow-right-up-line"></i>
+            </div>
             <div class="description">
               Linear helps streamline software projects, sprints, tasks, and bug
               tracking. Here’s how to get...
@@ -100,7 +104,9 @@ themeToggle.addEventListener("change", () => {
           <img src="sec1_img3.png" alt="" />
           <div class="sec2_content">
             <div class="date">Lana Steiner • 1 Jan 2023</div>
-            <div class="sec_heading">Building your API Stack</div>
+            <div class="sec_heading"><div>Building your API Stack</div>
+              <i class="ri-arrow-right-up-line"></i>
+            </div>
             <div class="description">
               The rise of RESTful APIs has been met by a rise in tools for
               creating, testing, and manag...
@@ -116,9 +122,13 @@ themeToggle.addEventListener("change", () => {
     <div class="section2">
       <div class="sec2_img1"><img src="/sec2_img1.png" alt="" /></div>
       <div class="section_content">
-        <div class="date">Olivia Rhye • 1 Jan 2023</div>
+        <div class="date">Olivia Rhye • 1 Jan 2023
+          <i class="ri-arrow-right-up-line"></i>
+        </div>
         <div class="sec_heading">
           Grid system for better Design User Interface
+          <div></div>
+          <i class="ri-arrow-right-up-line"></i>
         </div>
         <div class="description">
           A grid system is a design tool used to arrange content on a webpage.
@@ -139,13 +149,13 @@ themeToggle.addEventListener("change", () => {
         <div class="sec3_img">        <img src="/sec3_img1.png" alt="" />
         </div>
         <div class="sec3_content">
-          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="date">Alec Whitten • 1 Jan 2023</div>
           <div class="sec_heading">
-            <div>UX review presentations</div>
+            <div>Bill leadership lessons</div>
+            <i class="ri-arrow-right-up-line"></i>
           </div>
           <div class="description">
-            How do you create compelling presentations that wow your colleagues
-            and impress your managers?
+            Like to know the secrets of transforming a 3x Super Bowl winning Dynasty?
           </div>
           <div class="categories">
             <div class="badge_bg"><div class="badge">Design</div></div>
@@ -159,13 +169,15 @@ themeToggle.addEventListener("change", () => {
 
         </div>
         <div class="sec3_content">
-          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="date">Demi WIlkinson • 1 Jan 2023</div>
           <div class="sec_heading">
-            <div>UX review presentations</div>
+            <div>PM mental models
+            </div>
+            <i class="ri-arrow-right-up-line"></i>
+
           </div>
           <div class="description">
-            How do you create compelling presentations that wow your colleagues
-            and impress your managers?
+            Mental models are simple expressions of complex processes or relationships.
           </div>
           <div class="categories">
             <div class="badge_bg"><div class="badge">Design</div></div>
@@ -179,13 +191,13 @@ themeToggle.addEventListener("change", () => {
 
         </div>
         <div class="sec3_content">
-          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="date">Candice Wu • 1 Jan 2023</div>
           <div class="sec_heading">
-            <div>UX review presentations</div>
+            <div>What is Wireframing?</div>
+            <i class="ri-arrow-right-up-line"></i>
           </div>
           <div class="description">
-            How do you create compelling presentations that wow your colleagues
-            and impress your managers?
+            Introduction to Wireframing and its Principles. Learn from the best in the industry.
           </div>
           <div class="categories">
             <div class="badge_bg"><div class="badge">Design</div></div>
@@ -200,13 +212,13 @@ themeToggle.addEventListener("change", () => {
 
         </div>
         <div class="sec3_content">
-          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="date">Natali Craig • 1 Jan 2023</div>
           <div class="sec_heading">
-            <div>UX review presentations</div>
+            <div>How collaboration makes us better designers</div>
+            <i class="ri-arrow-right-up-line"></i>
           </div>
           <div class="description">
-            How do you create compelling presentations that wow your colleagues
-            and impress your managers?
+            Collaboration can make our teams stronger, and our individual designs better.
           </div>
           <div class="categories">
             <div class="badge_bg"><div class="badge">Design</div></div>
@@ -220,13 +232,13 @@ themeToggle.addEventListener("change", () => {
 
         </div>
         <div class="sec3_content">
-          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="date">Drew Cano • 1 Jan 2023</div>
           <div class="sec_heading">
-            <div>UX review presentations</div>
+            <div>Our top 10 Javascript frameworks to use</div>
+            <i class="ri-arrow-right-up-line"></i>
           </div>
           <div class="description">
-            How do you create compelling presentations that wow your colleagues
-            and impress your managers?
+            JavaScript frameworks make development easy with extensive features.
           </div>
           <div class="categories">
             <div class="badge_bg"><div class="badge">Design</div></div>
@@ -240,13 +252,13 @@ themeToggle.addEventListener("change", () => {
 
         </div>
         <div class="sec3_content">
-          <div class="date">Olivia Rhye • 1 Jan 2023</div>
+          <div class="date">Orlando Diggs • 1 Jan 2023</div>
           <div class="sec_heading">
-            <div>UX review presentations</div>
+            <div>Podcast: Creating a better CX Community</div>
+            <i class="ri-arrow-right-up-line"></i>
           </div>
           <div class="description">
-            How do you create compelling presentations that wow your colleagues
-            and impress your managers?
+            Starting a community doesn’t need to be complicated, but how do you get started?
           </div>
           <div class="categories">
             <div class="badge_bg"><div class="badge">Design</div></div>
